--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Telnetlab - Tel-U</title>
 </head>
 <body>
-  <p>On goingg</p>
+  <p>sedang dalam tahap pengembangan.</p>
 </body>
 </html>
