--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Telnetlab - Tel-U</title>
 </head>
 <body>
+  <h1>Welcome to Telecommunication Network Laboratory</h1>
   <p>sedang dalam tahap pengembangan.</p>
 </body>
 </html>
