--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
   <h1>Welcome to Telecommunication Network Laboratory</h1>
   <p>sedang dalam tahap pengembangan.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, tempore.</p>
 </body>
 </html>
