--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Telnetlab - Tel-U</title>
-</head>
-<body>
-  <h1>Welcome to Telecommunication Network Laboratory</h1>
-  <p>sedang dalam tahap pengembangan.</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, tempore.</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Telnetlab - Tel-U</title>
+  </head>
+  <body>
+    <h1>Welcome to Telecommunication Network Laboratory</h1>
+    <p>sedang dalam tahap pengembangan.</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, tempore.
+    </p>
+  </body>
 </html>
