--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Welcome to Telecommunication Network Laboratory</h1>
-    <p>sedang dalam tahap pengembangan.</p>
+    <p>sedang dalam tahap pengembangan</p>
   </body>
 </html>
