--- a/index.html
+++ b/index.html
@@ -1,13 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Telnetlab - Tel-U</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TelNetLab - #TroubleShootingMakeUsStronger</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/telnet-logo-dark.jpg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to Telecommunication Network Laboratory</h1>
-  <p>sedang dalam tahap pengembangan.</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, tempore.</p>
+    <header class="header">
+        <nav class="nav-container">
+            <div class="logo-container">
+                <div class="logo-icon"></div>
+                <div class="logo-text">TelNetLab</div>
+            </div>
+            <div class="nav-links">
+                <a href="#home">Home</a>
+                <a href="#courses">Courses</a>
+                <a href="#team">Team</a>
+            </div>
+        </nav>
+    </header>
+
+    <section class="hero" id="home">
+        <div class="hero-content">
+            <div class="hero-logo"></div>
+            <h1>#TroubleShootingMakeUsStronger</h1>
+            <p>Advancing Technology Through Collaborative Research</p>
+            <a href="#courses" class="cta-button">Explore Courses</a>
+        </div>
+    </section>
+
+    <section class="courses" id="courses">
+        <div class="section-title">
+            <h2>Our Courses</h2>
+            <p>Explore our cutting-edge curriculum</p>
+        </div>
+        <div class="courses-grid">
+            <div class="course-card">
+                <div class="course-image">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.bhmpics.com%2Fdownloads%2Falgorithm-wallpaper%2F19.algorithm-formulation.jpg&f=1&nofb=1&ipt=b7ecb4521bedb9d6bbd13876cffe86b67b79dcf0ec02a03f7d5a51dbc5345d92&ipo=images" alt="Course Image">
+                </div>
+                <div class="course-content">
+                    <h3>Algorithms & Programming</h3>
+                    <p>Master modern programming techniques and software development best practices.</p>
+                </div>
+            </div>
+            <div class="course-card">
+                <div class="course-image">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F8174697.jpg&f=1&nofb=1&ipt=d5d0f44831e95d92b178655f69c52313c2c27750fd23c09a4a6b71f349386538&ipo=images" alt="Course Image">
+                </div>
+                <div class="course-content">
+                    <h3>Web Design</h3>
+                    <p>Learn the principles of effective web design and user experience.</p>
+                </div>
+            </div>
+            <div class="course-card">
+                <div class="course-image">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fgetwallpapers.com%2Fwallpaper%2Ffull%2Fb%2F9%2Fe%2F165638.jpg&f=1&nofb=1&ipt=6b89fdd4b33dd3fa3b746951ac93ce2bff3c6a67dd47325af5f9e167950f7c96&ipo=images" alt="Course Image">
+                </div>
+                <div class="course-content">
+                    <h3>Computer Network</h3>
+                    <p>Understand the fundamentals of computer networks and their architecture.</p>
+                </div>
+            </div>
+            <div class="course-card">
+                <div class="course-image">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F5650220.png&f=1&nofb=1&ipt=3999c859722c4cae643dcdbaa55c8b42bfa0d2a405e29bc2ce4dc9a572c366ab&ipo=images" alt="Course Image">
+                </div>
+                <div class="course-content">
+                    <h3>Cloud Computing</h3>
+                    <p>Explore cloud services, deployment models, and architecture.</p>
+                </div>
+            </div>
+            <div class="course-card">
+              <div class="course-image">
+                  <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.equipment-hq.co.uk%2Fwp-content%2Fuploads%2F2020%2F07%2F5g-network-architecture.jpg&f=1&nofb=1&ipt=e751f265cc0f955f1f09b998862b66c5a579fb9502dcf1237acd52c174af0b95&ipo=images" alt="Course Image">
+              </div>
+              <div class="course-content">
+                  <h3>Telecommunication Network</h3>
+                  <p>Learn about telecommunication systems and their applications.</p>
+              </div>
+            </div>
+            <div class="course-card">
+                <div class="course-image">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpapercave.com%2Fwp%2Fwp2601083.jpg&f=1&nofb=1&ipt=2f4211f07aa1d03a45476abba628b339656ecceb0557f361ff5aa959fef25484&ipo=images" alt="Course Image">
+                </div>
+                <div class="course-content">
+                    <h3>Cyber Security</h3>
+                    <p>Network security and ethical hacking fundamentals.</p>
+                </div>
+            </div>
+            <div class="course-card">
+              <div class="course-image">
+                  <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fthumbs.dreamstime.com%2Fb%2Fcreative-glowing-night-smart-city-wallpaper-interface-downtown-technology-innovation-urbanization-concept-double-exposure-236746238.jpg&f=1&nofb=1&ipt=4bf27ce502349d1fdd0232e0083ed26e0a47bd6b49d099c58b3b94a405abdf35&ipo=images" alt="Course Image">
+              </div>
+              <div class="course-content">
+                  <h3>Internet of Things</h3>
+                  <p>Explore the integration of devices and the impact of IoT on modern technology.</p>
+              </div>
+          </div>
+        </div>
+    </section>
+
+    <section class="team" id="team">
+        <div class="section-title">
+            <h2>Our Team</h2>
+            <p>Meet our expert researchers</p>
+        </div>
+        <div class="team-grid" id="teamMembers"></div>
+    </section>
+
+    <footer class="footer">
+        <p>© 2025 TelNetLab. All rights reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
