--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="courses-grid">
             <div class="course-card">
                 <div class="course-image">
-                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.bhmpics.com%2Fdownloads%2Falgorithm-wallpaper%2F19.algorithm-formulation.jpg&f=1&nofb=1&ipt=b7ecb4521bedb9d6bbd13876cffe86b67b79dcf0ec02a03f7d5a51dbc5345d92&ipo=images" alt="Course Image">
+                    <img src="assets/img/algorithms-and-programming.jpg" alt="Course Image">
                 </div>
                 <div class="course-content">
                     <h3>Algorithms & Programming</h3>
@@ -50,7 +50,7 @@
             </div>
             <div class="course-card">
                 <div class="course-image">
-                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F8174697.jpg&f=1&nofb=1&ipt=d5d0f44831e95d92b178655f69c52313c2c27750fd23c09a4a6b71f349386538&ipo=images" alt="Course Image">
+                    <img src="assets/img/web-design.jpg" alt="Course Image">
                 </div>
                 <div class="course-content">
                     <h3>Web Design</h3>
@@ -59,7 +59,7 @@
             </div>
             <div class="course-card">
                 <div class="course-image">
-                    <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fgetwallpapers.com%2Fwallpaper%2Ffull%2Fb%2F9%2Fe%2F165638.jpg&f=1&nofb=1&ipt=6b89fdd4b33dd3fa3b746951ac93ce2bff3c6a67dd47325af5f9e167950f7c96&ipo=images" alt="Course Image">
+                    <img src="assets/img/computer-network.jpg" alt="Course Image">
                 </div>
                 <div class="course-content">
                     <h3>Computer Network</h3>
@@ -68,7 +68,7 @@
             </div>
             <div class="course-card">
                 <div class="course-image">
-                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F5650220.png&f=1&nofb=1&ipt=3999c859722c4cae643dcdbaa55c8b42bfa0d2a405e29bc2ce4dc9a572c366ab&ipo=images" alt="Course Image">
+                    <img src="assets/img/cloud-computing.png" alt="Course Image">
                 </div>
                 <div class="course-content">
                     <h3>Cloud Computing</h3>
@@ -76,17 +76,17 @@
                 </div>
             </div>
             <div class="course-card">
-              <div class="course-image">
-                  <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.equipment-hq.co.uk%2Fwp-content%2Fuploads%2F2020%2F07%2F5g-network-architecture.jpg&f=1&nofb=1&ipt=e751f265cc0f955f1f09b998862b66c5a579fb9502dcf1237acd52c174af0b95&ipo=images" alt="Course Image">
-              </div>
-              <div class="course-content">
-                  <h3>Telecommunication Network</h3>
-                  <p>Learn about telecommunication systems and their applications.</p>
-              </div>
+                <div class="course-image">
+                    <img src="assets/img/telecommunication-network.jpg" alt="Course Image">
+                </div>
+                <div class="course-content">
+                    <h3>Telecommunication Network</h3>
+                    <p>Learn about telecommunication systems and their applications.</p>
+                </div>
             </div>
             <div class="course-card">
                 <div class="course-image">
-                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpapercave.com%2Fwp%2Fwp2601083.jpg&f=1&nofb=1&ipt=2f4211f07aa1d03a45476abba628b339656ecceb0557f361ff5aa959fef25484&ipo=images" alt="Course Image">
+                    <img src="assets/img/network-security.jpg" alt="Course Image">
                 </div>
                 <div class="course-content">
                     <h3>Cyber Security</h3>
@@ -94,14 +94,14 @@
                 </div>
             </div>
             <div class="course-card">
-              <div class="course-image">
-                  <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fthumbs.dreamstime.com%2Fb%2Fcreative-glowing-night-smart-city-wallpaper-interface-downtown-technology-innovation-urbanization-concept-double-exposure-236746238.jpg&f=1&nofb=1&ipt=4bf27ce502349d1fdd0232e0083ed26e0a47bd6b49d099c58b3b94a405abdf35&ipo=images" alt="Course Image">
-              </div>
-              <div class="course-content">
-                  <h3>Internet of Things</h3>
-                  <p>Explore the integration of devices and the impact of IoT on modern technology.</p>
-              </div>
-          </div>
+                <div class="course-image">
+                    <img src="assets/img/internet-of-things.jpg" alt="Course Image">
+                </div>
+                <div class="course-content">
+                    <h3>Internet of Things</h3>
+                    <p>Explore the integration of devices and the impact of IoT on modern technology.</p>
+                </div>
+            </div>
         </div>
     </section>
 
