--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TelNetLab - #TroubleShootingMakeUsStronger</title>
+    <title>TelNet Laboratory - #TroubleShootingMakeUsStronger</title>
     <link rel="icon" type="image/x-icon" href="assets/img/telnet-logo-dark.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
         <nav class="nav-container">
             <div class="logo-container">
                 <div class="logo-icon"></div>
-                <div class="logo-text">TelNetLab</div>
+                <div class="logo-text">TelNet Laboratory</div>
             </div>
             <div class="nav-links">
                 <a href="#home">Home</a>
@@ -28,7 +28,7 @@
         <div class="hero-content">
             <div class="hero-logo"></div>
             <h1>#TroubleShootingMakeUsStronger</h1>
-            <p>Advancing Technology Through Collaborative Research</p>
+            <p>Telecommunication Network Laboratory</p>
             <a href="#courses" class="cta-button">Explore Courses</a>
         </div>
     </section>
@@ -40,67 +40,81 @@
         </div>
         <div class="courses-grid">
             <div class="course-card">
-                <div class="course-image">
-                    <img src="assets/img/algorithms-and-programming.jpg" alt="Course Image">
-                </div>
-                <div class="course-content">
-                    <h3>Algorithms & Programming</h3>
-                    <p>Master modern programming techniques and software development best practices.</p>
-                </div>
+                <a href="#">
+                    <div class="course-image">
+                        <img src="assets/img/algorithms-and-programming.jpg" alt="Course Image">
+                    </div>
+                    <div class="course-content">
+                        <h3>Algorithms & Programming</h3>
+                        <p>Master Python programming techniques and software development best practices</p>
+                    </div>
+                </a>
             </div>
             <div class="course-card">
-                <div class="course-image">
-                    <img src="assets/img/web-design.jpg" alt="Course Image">
-                </div>
-                <div class="course-content">
-                    <h3>Web Design</h3>
-                    <p>Learn the principles of effective web design and user experience.</p>
-                </div>
+                <a href="web-design/index.html">
+                    <div class="course-image">
+                        <img src="assets/img/web-design.jpg" alt="Course Image">
+                    </div>
+                    <div class="course-content">
+                        <h3>Web Design</h3>
+                        <p>Learn the principles of effective web design and user experience</p>
+                    </div>
+                </a>
             </div>
             <div class="course-card">
-                <div class="course-image">
-                    <img src="assets/img/computer-network.jpg" alt="Course Image">
-                </div>
-                <div class="course-content">
-                    <h3>Computer Network</h3>
-                    <p>Understand the fundamentals of computer networks and their architecture.</p>
-                </div>
+                <a href="">
+                    <div class="course-image">
+                        <img src="assets/img/computer-network.jpg" alt="Course Image">
+                    </div>
+                    <div class="course-content">
+                        <h3>Computer Network</h3>
+                        <p>Understand the fundamentals of computer networks and their architecture</p>
+                    </div>
+                </a>
             </div>
             <div class="course-card">
-                <div class="course-image">
-                    <img src="assets/img/cloud-computing.png" alt="Course Image">
-                </div>
-                <div class="course-content">
-                    <h3>Cloud Computing</h3>
-                    <p>Explore cloud services, deployment models, and architecture.</p>
-                </div>
+                <a href="">
+                    <div class="course-image">
+                        <img src="assets/img/cloud-computing.png" alt="Course Image">
+                    </div>
+                    <div class="course-content">
+                        <h3>Cloud Computing</h3>
+                        <p>Explore cloud services, deployment models, and architecture</p>
+                    </div>
+                </a>
             </div>
             <div class="course-card">
-                <div class="course-image">
-                    <img src="assets/img/telecommunication-network.jpg" alt="Course Image">
-                </div>
-                <div class="course-content">
-                    <h3>Telecommunication Network</h3>
-                    <p>Learn about telecommunication systems and their applications.</p>
-                </div>
+                <a href="">
+                    <div class="course-image">
+                        <img src="assets/img/telecommunication-network.jpg" alt="Course Image">
+                    </div>
+                    <div class="course-content">
+                        <h3>Telecommunication Network</h3>
+                        <p>Learn about telecommunication systems and their applications</p>
+                    </div>
+                </a>
             </div>
             <div class="course-card">
-                <div class="course-image">
-                    <img src="assets/img/network-security.jpg" alt="Course Image">
-                </div>
-                <div class="course-content">
-                    <h3>Cyber Security</h3>
-                    <p>Network security and ethical hacking fundamentals.</p>
-                </div>
+                <a href="">
+                    <div class="course-image">
+                        <img src="assets/img/network-security.jpg" alt="Course Image">
+                    </div>
+                    <div class="course-content">
+                        <h3>Cyber Security</h3>
+                        <p>Network security and ethical hacking fundamentals</p>
+                    </div>
+                </a>
             </div>
             <div class="course-card">
-                <div class="course-image">
-                    <img src="assets/img/internet-of-things.jpg" alt="Course Image">
-                </div>
-                <div class="course-content">
-                    <h3>Internet of Things</h3>
-                    <p>Explore the integration of devices and the impact of IoT on modern technology.</p>
-                </div>
+                <a href="">
+                    <div class="course-image">
+                        <img src="assets/img/internet-of-things.jpg" alt="Course Image">
+                    </div>
+                    <div class="course-content">
+                        <h3>Internet of Things</h3>
+                        <p>Explore the integration of devices and the impact of IoT on modern technology</p>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
@@ -114,7 +128,7 @@
     </section>
 
     <footer class="footer">
-        <p>© 2025 TelNetLab. All rights reserved.</p>
+        <p>© 2025 TelNet Laboratory. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
