--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="courses-grid">
             <div class="course-card">
-                <a href="#">
+                <a href="algorithms-and-programming/index.html">
                     <div class="course-image">
                         <img src="assets/img/algorithms-and-programming.jpg" alt="Course Image">
                     </div>
