--- a/team.html
+++ b/team.html
@@ -35,7 +35,7 @@
 
     <section class="team" id="team">
         <div class="section-title">
-            <h2>Our Team</h2>
+            <h2>Web Design Team</h2>
         </div>
         <div class="team-grid" id="teamMembers"></div>
     </section>
