--- a/web-design/index.html
+++ b/web-design/index.html
@@ -27,7 +27,7 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <h1>Web Design Course Modules</h1>
-            <p>Kuasai desain web modern melalui 11 modul komprehensif</p>
+            <p>Kuasai desain web modern</p>
             <a href="#modules" class="cta-button">Mulailah Belajar</a>
         </div>
     </section>
@@ -41,7 +41,7 @@
             <a href="https://ricaldocs.github.io/assets/moduls/web_design/modul-1.pdf" target="_blank">
                 <div class="course-card">
                     <div class="course-image">
-                        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpapers.com%2Fimages%2Ffeatured%2Fsocial-media-apps-dgwr9vwvb0svnu9w.jpg&f=1&nofb=1&ipt=4747cd0fb199b23c975132f99211837ca5372b4fb693c6feb9744f55bca6ecd3&ipo=images" alt="Web Design">
+                        <img src="img/web-design.jpg" alt="Web Design">
                     </div>
                     <div class="course-content">
                         <h3>Pengenalan Aplikasi Berbasis Web dan Teks Editor</h3>
@@ -53,7 +53,7 @@
             <a href="https://ricaldocs.github.io/assets/moduls/web_design/modul-2.pdf" target="_blank">
                 <div class="course-card">
                     <div class="course-image">
-                        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F4868336.jpg&f=1&nofb=1&ipt=b43122d1468d96a67d6cee5ca5f7d4a873f56224ec7c8a37dc1163df9cd5665b&ipo=images" alt="HTML">
+                        <img src="img/html.jpg" alt="HTML">
                     </div>
                     <div class="course-content">
                         <h3>HTML (Hyper Text Markup Language)</h3>
@@ -65,7 +65,7 @@
             <a href="https://ricaldocs.github.io/assets/moduls/web_design/modul-3.pdf" target="_blank">
                 <div class="course-card">
                     <div class="course-image">
-                        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpapercave.com%2Fwp%2Fwp3181452.jpg&f=1&nofb=1&ipt=ce7bce1da7b88d8b4beee6abdf4615903c7f661d86c93628420bfdb1017598ee&ipo=images" alt="CSS">
+                        <img src="img/css.jpg" alt="CSS">
                     </div>
                     <div class="course-content">
                         <h3>CSS (Cascading Style Sheets)</h3>
@@ -77,7 +77,7 @@
             <a href="https://ricaldocs.github.io/assets/moduls/web_design/modul-7.pdf" target="_blank">
                 <div class="course-card">
                     <div class="course-image">
-                        <img src="https://wallpaperaccess.com/full/1555172.jpg" alt="JavaScript">
+                        <img src="img/javascript.jpg" alt="JavaScript">
                     </div>
                     <div class="course-content">
                         <h3>JavaScript</h3>
@@ -89,7 +89,7 @@
             <a href="https://ricaldocs.github.io/assets/moduls/web_design/modul-4.pdf" target="_blank">
                 <div class="course-card">
                     <div class="course-image">
-                        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F3255123.jpg&f=1&nofb=1&ipt=92653814b5b720a8f653c5622a86d8b52ac75fe63b7ef098240da6102537a515&ipo=images" alt="PHP">
+                        <img src="img/php.jpg" alt="PHP">
                     </div>
                     <div class="course-content">
                         <h3>PHP</h3>
@@ -101,7 +101,7 @@
             <a href="https://ricaldocs.github.io/assets/moduls/web_design/modul-5.pdf" target="_blank">
                 <div class="course-card">
                     <div class="course-image">
-                        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpapers.com%2Fimages%2Fhd%2Fminimalist-database-icon-cycnflysweg912mv.jpg&f=1&nofb=1&ipt=a36bf2b727966da1ca93358b84590532ced69bbb4f05be33c3d9204c04db8c2d&ipo=images" alt="Database">
+                        <img src="img/database.jpg" alt="Database">
                     </div>
                     <div class="course-content">
                         <h3>Database</h3>
@@ -113,7 +113,7 @@
             <a href="https://ricaldocs.github.io/assets/moduls/web_design/modul-6.pdf" target="_blank">
                 <div class="course-card">
                     <div class="course-image">
-                        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimg00.deviantart.net%2Fd288%2Fi%2F2016%2F016%2F8%2F4%2Fmysql_wallpaper_by_milesandryprower-d9o6y9z.png&f=1&nofb=1&ipt=13e07102f605f4d4152070e2494550a40f47973975310b21392000fec395e01d&ipo=images" alt="Relasi MySQL">
+                        <img src="img/mysql.png" alt="Relasi MySQL">
                     </div>
                     <div class="course-content">
                         <h3>Relasi MySQL & Koneksi MySQL dengan PHP</h3>
@@ -125,7 +125,7 @@
             <a href="https://ricaldocs.github.io/assets/moduls/web_design/modul-8.pdf" target="_blank">
                 <div class="course-card">
                     <div class="course-image">
-                        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F11145024.jpg&f=1&nofb=1&ipt=0c912e7c778ece89fc9e1e238af0891f0cf727282c58a9fbb72d6ab74599da10&ipo=images" alt="Visualisasi Database">
+                        <img src="img/pie-charts.jpg" alt="Visualisasi Database">
                     </div>
                     <div class="course-content">
                         <h3>Visualisasi Database Dalam Bentuk Grafik</h3>
@@ -137,7 +137,7 @@
             <a href="https://ricaldocs.github.io/assets/moduls/web_design/modul-10.pdf" target="_blank">
                 <div class="course-card">
                     <div class="course-image">
-                        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimages3.alphacoders.com%2F137%2Fthumb-1920-1376383.jpg&f=1&nofb=1&ipt=db84530955bf01ceadec679b554f14702977e47c1bc742a687a916bc72fb79ef&ipo=images" alt="Laravel">
+                        <img src="img/laravel.jpg" alt="Laravel">
                     </div>
                     <div class="course-content">
                         <h3>Laravel</h3>
@@ -149,7 +149,7 @@
             <a href="https://ricaldocs.github.io/assets/moduls/web_design/modul-9.pdf" target="_blank">
                 <div class="course-card">
                     <div class="course-image">
-                        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperbat.com%2Fimg%2F8622048-git-and-github-at-work.jpg&f=1&nofb=1&ipt=3d3e01ea6d457fb58fcde55c8620cc7c1bada8a5ef250e6d1ceddb3ee30253d4&ipo=images" alt="Web Hosting & GitHub">
+                        <img src="img/github.jpg" alt="Web Hosting & GitHub">
                     </div>
                     <div class="course-content">
                         <h3>Web Hosting dan GitHub</h3>
@@ -161,7 +161,7 @@
             <a href="https://ricaldocs.github.io/assets/moduls/web_design/modul-11.pdf" target="_blank">
                 <div class="course-card">
                     <div class="course-image">
-                        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F9432775.png&f=1&nofb=1&ipt=938ebbb42627fd7fb8675520edcbb762a04a1f6e46b45e4f4763c92aed15c3df&ipo=images" alt="Figma">
+                        <img src="img/figma.png" alt="Figma">
                     </div>
                     <div class="course-content">
                         <h3>Figma</h3>
